[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/observer/observer_bullet_0.png" type="Texture" id=1]
[ext_resource path="res://sprites/observer/observer_bullet_3.png" type="Texture" id=2]
[ext_resource path="res://sprites/observer/observer_bullet_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/observer/observer_bullet_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/observer/observer_bullet_4.png" type="Texture" id=5]
[ext_resource path="res://ObserverShell.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "ShellFired",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.99568, 1.64264 )

[node name="ObserverShell" type="Area2D"]
script = ExtResource( 6 )
speed = 65

[node name="Shell_Anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "ShellFired"
frame = 1

[node name="Shell_Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Shell_Visibility" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_ObserverShell_body_entered"]
[connection signal="screen_exited" from="Shell_Visibility" to="." method="_on_Shell_Visibility_screen_exited"]
